--- a/sidebar-v2-master/sidebar-v2-master/scss/leaflet-sidebar.scss
+++ b/sidebar-v2-master/sidebar-v2-master/scss/leaflet-sidebar.scss
@@ -8,7 +8,7 @@ $tabs-bg: #fff !default;
 $tab-hover-fg: #000 !default;
 $tab-hover-bg: #eee !default;
 $tab-active-fg: #fff !default;
-$tab-active-bg: #0074d9 !default;
+$tab-active-bg: #cdd9e2 !default;
 
 @import 'base';
 
