--- a/sidebar-v2-master/sidebar-v2-master/scss/_ol-base.scss
+++ b/sidebar-v2-master/sidebar-v2-master/scss/_ol-base.scss
@@ -8,7 +8,7 @@ $tabs-bg: rgba(0, 60, 136, 0.5) !default;
 $tab-hover-fg: #fff !default;
 $tab-hover-bg: rgba(0, 60, 136, 0.6) !default;
 $tab-active-fg: #fff !default;
-$tab-active-bg: #0074d9 !default;
+$tab-active-bg: #cdd9e2 !default;
 
 $move-map-in-xs: false !default;
 
