--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,4 +8,6 @@
 
 .sidebar-header{
     background-color: rgb(223, 223, 223) !important;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: black;
 }
