--- a/public/css/leaflet-sidebar.css
+++ b/public/css/leaflet-sidebar.css
@@ -116,8 +116,10 @@
   margin: -10px -20px 0;
   height: 40px;
   padding: 0 20px;
+  text-align: center;
   line-height: 40px;
-  font-size: 14.4pt;
+  font-size: 20pt;
+  vertical-align: middle;
   color: black;
   font-family: 'Roboto Mono', monospace;
   background-color: #999a9b; }
