--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,8 +6,7 @@
     list-style-type: none;
 }
 
-.sidebar-header{
-    background-color: rgb(223, 223, 223) !important;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: black;
+.w3-bar-item
+{
+    display: block;
 }
